# jc-taxes

./: .gitignore  DATA-SOURCES.md  README.md  ROADMAP.md  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml
census/: hudson-blocks-geo.geojson  hudson-blocks-pop.json  jc-wards.geojson
specs/: lot-geometry-fixes.md  yr-built-color-metric.md
src/jc_taxes/: __init__.py  api.py  building_desc.py  census.py  cli.py  geojson.py  geojson_yearly.py  models.py  paths.py  payments.py
www/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  scrns.config.ts  vite.config.ts
www/e2e/: app.spec.ts
www/public/: CNAME  parcels.geojson.dvc  taxes-2018-blocks.geojson.dvc  taxes-2018-census-blocks.geojson.dvc  taxes-2018-lots.geojson.dvc  taxes-2018-units.geojson.dvc  taxes-2018-wards.geojson.dvc  taxes-2018.geojson.dvc  taxes-2019-blocks.geojson.dvc  taxes-2019-census-blocks.geojson.dvc  taxes-2019-lots.geojson.dvc  taxes-2019-units.geojson.dvc  taxes-2019-wards.geojson.dvc  taxes-2019.geojson.dvc  taxes-2020-blocks.geojson.dvc  taxes-2020-census-blocks.geojson.dvc  taxes-2020-lots.geojson.dvc  taxes-2020-units.geojson.dvc  taxes-2020-wards.geojson.dvc  taxes-2020.geojson.dvc  taxes-2021-blocks.geojson.dvc  taxes-2021-census-blocks.geojson.dvc  taxes-2021-lots.geojson.dvc  taxes-2021-units.geojson.dvc  taxes-2021-wards.geojson.dvc  taxes-2021.geojson.dvc  taxes-2022-blocks.geojson.dvc  taxes-2022-census-blocks.geojson.dvc  taxes-2022-lots.geojson.dvc  taxes-2022-units.geojson.dvc  taxes-2022-wards.geojson.dvc  (+19 more)
(+21 files in other folders)
