[project]
name = "jc-taxes"
version = "0.1.0"
description = "Jersey City property tax data scraper and visualizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyarrow>=15.0",
    "sqlalchemy>=2.0",
    "tenacity>=8.0",
    "utz>=0.20",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
viz = [
    "plotly>=5.0",
    "kaleido>=0.2",
]

[project.scripts]
jct = "jc_taxes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jc_taxes"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
